--- a/services/web/client/source/resource/qxapp/project-v0.0.1.json
+++ b/services/web/client/source/resource/qxapp/project-v0.0.1.json
@@ -202,6 +202,17 @@
                 }
               }
             },
+            "links": {
+              "type": "array",
+              "items": {
+                "type": "string"
+              },
+              "description": "node IDs of where the node is connected to",
+              "examples": [
+                "nodeUuid1",
+                "nodeUuid2"
+              ]
+            },
             "position": {
               "type": "object",
               "additionalProperties": false,
