--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,10 @@ matrix:
         - python --version
         - uname -a
         - lsb_release -a
+        - curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
+        - sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
+        - sudo apt-get update
+        - sudo apt-get -y install docker-ce
         - docker --version
         - docker-compose --version
         # shutdown postgres because sometimes is is alrady up ???
