--- a/services/storage/.bumpversion.cfg
+++ b/services/storage/.bumpversion.cfg
@@ -14,3 +14,7 @@ replace = {new_version}
 [bumpversion:file:src/simcore_service_storage/__version__.py]
 search = __version__=='{current_version}'
 replace = __version__=='{new_version}'
+
+[bumpversion:file:client-sdk/codegen_config.json]
+search = "packageVersion":"{current_version}"
+replace = "packageVersion":"{new_version}""
