Fixing client package namespace

--- a/services/storage/.bumpversion.cfg
+++ b/services/storage/.bumpversion.cfg
@@ -18,3 +18,6 @@ replace = __version__=='{new_version}'
 [bumpversion:file:client-sdk/codegen_config.json]
 search = "packageVersion":"{current_version}"
 replace = "packageVersion":"{new_version}""
+
+
+# TODO trigger generation of new client-skd!?
