--- a/.travis.yml
+++ b/.travis.yml
@@ -41,6 +41,7 @@ matrix:
         - pip3 install services/director[test]
         - pip3 install packages/director-sdk/python
         - pushd services/web/server; pip3 install -r requirements/ci.txt; popd
+        - pushd services/storage; pip3 install -r requirements/dev.txt; popd
 
       before_script:
         - pylint --version
