add $schema pointer

--- a/services/web/client/source/resource/qxapp/project-v1.0.0.json
+++ b/services/web/client/source/resource/qxapp/project-v1.0.0.json
@@ -12,9 +12,14 @@
     "collaborators",
     "creationDate",
     "lastChangeDate",
-    "workbench"
+    "workbench",
+    "$schema"
   ],
   "properties": {
+    "$schema": {
+      "type": "string",
+      "format": "uri"
+    },
     "name": {
       "type": "string",
       "description": "project name",
