enhance converter to save as yaml

--- a/scripts/jsonschema/openapi_converter/Dockerfile
+++ b/scripts/jsonschema/openapi_converter/Dockerfile
@@ -7,7 +7,8 @@ VOLUME [ "/output" ]
 
 WORKDIR /src
 
-RUN npm install --save json-schema-to-openapi-schema
+RUN npm install --save json-schema-to-openapi-schema && \
+    npm install --save js-yaml
 COPY converter.js /src/converter.js
 
 
