--- a/services/web/shared/node-oa3-0.0.1.yaml
+++ b/services/web/shared/node-oa3-0.0.1.yaml
@@ -1,4 +1,4 @@
-openapi: 3.0.1
+openapi: 3.0.2
 servers: []
 
 info:
@@ -13,7 +13,7 @@ info:
     url: 'https://opensource.org/licenses/MIT'
 
 tags:
-  - name: node api
+  - name: node
     description: |
       The simcore frontend provides a bunch of custom ui elements for nodes to interact with users.
       The frontend uses these api calls to query the nodes about the gui elemets they want to use, and it
@@ -23,25 +23,25 @@ paths:
   /node/{nodeInstanceUUID}/mainUi:
     get:
       tags:
-        - node api
+        - node
       summary: get a json description of the ui to use to present the node specific ui
       # a custom json schema for this description has to be provided
     post:
       tags:
-        -node api
+        -node
       summary: send data back. the protocol depends on the ui description.
   /node/{nodeInstanceUUID}/outputUi/{outputKey}:
     get:
       tags:
-        - node api
+        - node
       summary: get a json description  of the ui for presenting the output within the mainUi
       # a custom json schema for this description has to be provided
     post:
       tags:
-        - node api
+        - node
       summary: send data back to the output api ... protocol depends on the definition
   /node/{nodeInstanceUUID}/iframe:
     get:
       tags:
         - node api
-      summary: entry point for iframe interaction with the node. This relies also on the reverse proxy code.
+      summary: entry point for iframe interaction with the node. This relies on the reverse proxy code.
