--- a/services/director/src/simcore_service_director/oas3/v1/components/schemas/services.yaml
+++ b/services/director/src/simcore_service_director/oas3/v1/components/schemas/services.yaml
@@ -4,7 +4,7 @@ ServicesEnveloped:
     data:
       type: array
       items:
-        $ref: './node-meta-v0.0.1.json'
+        $ref: './node-meta-v0.0.1.yaml'
     status:
       type: integer
       example: 200
