reverted wrong change

--- a/services/web/server/src/simcore_service_webserver/oas3/v1/errors.yaml
+++ b/services/web/server/src/simcore_service_webserver/oas3/v1/errors.yaml
@@ -6,7 +6,7 @@ components:
         - error
       properties:
         error:
-          $ref: '#Error'
+          $ref: '#components/schemas/Error'
         status:
           description: Error code
           type: integer
