its oneOf and not anyOf

--- a/services/web/client/source/resource/qxapp/project-v1.0.0.json
+++ b/services/web/client/source/resource/qxapp/project-v1.0.0.json
@@ -222,7 +222,7 @@
       },
       "patternProperties": {
         "^[-_a-zA-Z0-9]+$": {
-          "anyOf": [
+          "oneOf": [
             { "$ref": "#/properties/workbench/definitions/node" },
             { "$ref": "#/properties/workbench/definitions/containerNode" }
           ]
