--- a/services/web/server/src/simcore_service_webserver/oas3/v0/components/schemas/health_check.yml
+++ b/services/web/server/src/simcore_service_webserver/oas3/v0/components/schemas/health_check.yml
@@ -1,23 +1,32 @@
 HealthCheckEnveloped:
   type: object
+  required:
+    - data
+    - error
   properties:
     data:
-      $ref: '#HealthCheck'
-    status:
-      type: integer
-      example: 200
-HealthCheck:
+      $ref: '#/HealthCheckType'
+      nullable: true
+      default: null
+    error:
+      $ref: "./error.yml#/ErrorType"
+      nullable: true
+      default: null
+
+
+HealthCheckType:
   type: object
   properties:
     name:
       type: string
-      example: director service
     status:
       type: string
-      example: SERVICE_RUNNING
     api_version:
       type: string
-      example: 1.0.0-dev
     version:
       type: string
-      example: 1dfcfdc
+  example:
+    name: 'simcore-director-service'
+    status: SERVICE_RUNNING
+    api_version: 0.1.0-dev+NJuzzD9S
+    version: 0.1.0-dev+N127Mfv9H
