--- a/services/web/server/src/simcore_service_webserver/oas3/v0/components/schemas/log_message.yml
+++ b/services/web/server/src/simcore_service_webserver/oas3/v0/components/schemas/log_message.yml
@@ -1,16 +1,28 @@
 LogMessageEnveloped:
   type: object
+  required:
+    - data
+    - error
   properties:
     data:
-      $ref: '#LogMessage'
-    status:
-      type: integer
-      example: 200
-LogMessage:
+      $ref: '#/LogMessageType'
+      nullable: true
+      default: null
+    error:
+      $ref: "./error.yml#/ErrorType"
+      nullable: true
+      default: null
+
+
+LogMessageType:
+# - logger can be use as a way for the client to filter messages.
+# - E.g. logger naming can be hierarchical, and all including "*.user.*"
+#   are displayed as a flash message in the front-end
+#
   type: object
   properties:
     level:
-      description: log level.
+      description: log level
       type: string
       default: INFO
       enum:
@@ -19,18 +31,14 @@ LogMessage:
        - INFO
        - ERROR
     message:
-      description: log message. Must be human readable if logger is set to USER.
+      description: log message. If logger is USER, then it MUST be human readable
       type: string
     logger:
-      description: defines the target logger
+      description: name of the logger receiving this message
       type: string
-      default: ROOT
-      enum:
-       - USER
-       - ROOT
   required:
    - message
   example:
     message: 'Hi there, Mr user'
     level: INFO
-    logger: USER
+    logger: user-logger
