--- a/services/web/server/src/simcore_service_webserver/oas3/v0/components/schemas/registration.yml
+++ b/services/web/server/src/simcore_service_webserver/oas3/v0/components/schemas/registration.yml
@@ -1,23 +1,32 @@
 RegistrationEnveloped:
   type: object
+  required:
+    - data
+    - error
   properties:
     data:
-      $ref: '#Registration'
-    status:
-      type: integer
-      example: 200
-Registration:
+      $ref: '#/RegistrationType'
+      nullable: true
+      default: null
+    error:
+      $ref: "./error.yml#/ErrorType"
+      nullable: true
+      default: null
+
+
+RegistrationType:
   type: object
   properties:
     email:
       type: string
-      #format: email
-      example: 'foo@mymail.com'
+      format: email
     password:
       type: string
-      #format: password
-      example: 'my secret pass'
+      format: password
     confirm:
       type: string
-      #format: password
-      example: 'my secret pass'
+      format: password
+  example:
+    email: foo@mymail.com
+    password: 'my secret'
+    confim: 'my secret'
