--- a/services/web/server/src/simcore_service_webserver/oas3/v0/components/schemas/log_message.yml
+++ b/services/web/server/src/simcore_service_webserver/oas3/v0/components/schemas/log_message.yml
@@ -1,12 +1,20 @@
 LogMessageEnveloped:
   type: object
+  required:
+    - data
+    - error
   properties:
     data:
-      $ref: '#LogMessage'
-    status:
-      type: integer
-      example: 200
-LogMessage:
+      $ref: '#/LogMessageType'
+      nullable: true
+      default: null
+    error:
+      $ref: "./error.yml#/ErrorType"
+      nullable: true
+      default: null
+
+
+LogMessageType:
   type: object
   properties:
     level:
@@ -19,7 +27,7 @@ LogMessage:
        - INFO
        - ERROR
     message:
-      description: log message. Must be human readable if logger is set to USER.
+      description: log message. If logger is USER, then it MUST be human readable
       type: string
     logger:
       description: defines the target logger
