fixed nullability of response 204 fixed test non passing on travis

--- a/services/director/src/simcore_service_director/oas3/v0/schemas/response204.yaml
+++ b/services/director/src/simcore_service_director/oas3/v0/schemas/response204.yaml
@@ -2,10 +2,10 @@ Response204Enveloped:
   type: object
   properties:
     data:
-      type: string
+      type: object
       nullable: true
-      example: 'null'
-      default: 'null'
+      example: null
+      default: null
     status:
       type: integer
       example: 204
