--- a/.travis.yml
+++ b/.travis.yml
@@ -46,6 +46,7 @@ matrix:
         - pip3 install packages/director-sdk/python
         - pushd services/web/server; pip3 install -r requirements/ci.txt; popd
         - pip3 install -r apis/tests/requirements.txt
+        - pip3 install -r services/apihub/tests/requirements.txt
 
       before_script:
         - pylint --version
