--- a/services/web/server/src/simcore_service_webserver/config/server-docker-dev.yaml
+++ b/services/web/server/src/simcore_service_webserver/config/server-docker-dev.yaml
@@ -7,6 +7,7 @@ app:
   client_outdir: ${SIMCORE_WEB_OUTDIR}
   log_level: DEBUG
   testing: True
+  disable_services: [director, postgres, rabbit, s3]
 director:
   host: ${DIRECTOR_HOST}
   port: ${DIRECTOR_PORT}
