--- a/services/web/server/src/simcore_service_webserver/oas3/v0/components/schemas/registration.yml
+++ b/services/web/server/src/simcore_service_webserver/oas3/v0/components/schemas/registration.yml
@@ -19,13 +19,17 @@ RegistrationType:
   properties:
     email:
       type: string
-      format: email
+      #FIXME:  'error': {'logs': [], 'errors': [{'code': 'OpenAPISchemaError', 'message': 'Unsupported email format unmarshalling', 'resource': None, 'field': None}], 'status': 400}}
+      #format: email
     password:
       type: string
-      format: password
+      # TODO:   File "/home/crespo/devp/osparc-simcore/.venv/lib/python3.6/site-packages/openapi_core/schema/schemas/models.py", line 182, in _unmarshal_string
+      # formatter = self.STRING_FORMAT_CAST_CALLABLE_GETTER[schema_format]
+      # KeyError: <SchemaFormat.PASSWORD: 'password'>
+      #format: password
     confirm:
       type: string
-      format: password
+      #format: password
   example:
     email: foo@mymail.com
     password: 'my secret'
