WIP: connecting login/logout and security sessions

--- a/services/web/server/src/simcore_service_webserver/oas3/v0/components/schemas/login.yml
+++ b/services/web/server/src/simcore_service_webserver/oas3/v0/components/schemas/login.yml
@@ -19,10 +19,10 @@ LoginFormType:
   properties:
     email:
       type: string
-      format: email
+      #FIXME: format: email
     password:
       type: string
-      format: password
+      #FIXME: format: password
   example:
     email: foo@mymail.com
     password: 'my secret'
