--- a/apis/shared/schemas/services.yaml
+++ b/apis/shared/schemas/services.yaml
@@ -1,10 +1,17 @@
 ServicesEnveloped:
   type: object
+  required:
+    - data
+    - error
   properties:
     data:
       type: array
       items:
         $ref: './node-meta-v0.0.1-converted.yaml'
+    error:
+      type: object
+      nullable: true
+      default: null
     status:
       type: integer
       example: 200
