--- a/services/storage/tests/docker-compose.yml
+++ b/services/storage/tests/docker-compose.yml
@@ -19,8 +19,8 @@ services:
   minio:
     image: minio/minio
     environment:
-      - MINIO_ACCESS_KEY=12345678
-      - MINIO_SECRET_KEY=12345678
+      - MINIO_ACCESS_KEY=${MINIO_ACCESS_KEY:-12345678}
+      - MINIO_SECRET_KEY=${MINIO_SECRET_KEY:-12345678}
     ports:
       - "9001:9000"
     command: server /data
