* moved apiCall into the path * link up entries from the json schema for the list definition

--- a/apis/shared/schemas/node-output-list-api-v0.0.1.yaml
+++ b/apis/shared/schemas/node-output-list-api-v0.0.1.yaml
@@ -10,11 +10,8 @@ properties:
     description: all the items in the list
     type: object
     properties:
-      call:
-        type: string
-        enum:
-          - getItemList
       request:
+        description: oa3 json schema description of the request structure
         type: object
         required:
           - start
@@ -41,10 +38,6 @@ properties:
       description: get details about an item in the list
       type: object
       properties:
-        call:
-          type: string
-          enum:
-            - getItem
         request:
           type: object
           required:
