refactored makefile, docker file and compose for flexibility added 1 input file and 1 output file added development docker for testing

--- a/services/dy-jupyter/Dockerfile
+++ b/services/dy-jupyter/Dockerfile
@@ -1,8 +1,23 @@
 ARG BASE_IMAGE=jupyter/base-notebook
-FROM ${BASE_IMAGE}
+FROM ${BASE_IMAGE}  AS base
 
 LABEL maintainer="sanderegg"
-
+EXPOSE 8888
+# ----------------------------------------------------------------
+# Add a python2 kernel in the notebook
+# Create a Python 2.x environment using conda including at least the ipython kernel
+# and the kernda utility. Add any additional packages you want available for use
+# in a Python 2 notebook to the first line here (e.g., pandas, matplotlib, etc.)
+RUN conda create --quiet --yes -p $CONDA_DIR/envs/python2 python=2.7 ipython ipykernel kernda && \
+    conda clean -tipsy
+USER root
+# Create a global kernelspec in the image and modify it so that it properly activates
+# the python2 conda environment.
+RUN $CONDA_DIR/envs/python2/bin/python -m ipykernel install && \
+$CONDA_DIR/envs/python2/bin/kernda -o -y /usr/local/share/jupyter/kernels/python2/kernel.json
+USER $NB_USER
+# ----------------------------------------------------------------
+# set up oSparc env variables
 ENV SIMCORE_NODE_UUID="-1" \
     S3_ENDPOINT="=1" \
     S3_ACCESS_KEY="-1" \
@@ -12,39 +27,54 @@ ENV SIMCORE_NODE_UUID="-1" \
     POSTGRES_USER="-1" \
     POSTGRES_PASSWORD="-1" \
     POSTGRES_DB="-1"
+# ----------------------------------------------------------------
+# set up oSparc labels
+ARG SERVICE_KEY
+ARG SERVICE_VERSION
+ARG SERVICE_NAME
+ARG BUILD_DATE
+ARG VCS_REF
 
-EXPOSE 8888
-
-LABEL io.simcore.key='{"key": "simcore/services/jupyter-base-notebook"}' \
-        io.simcore.tag='{"tag": "${SERVICES_VERSION}"}' \
-        io.simcore.name='{"name": "jupyter-base-notebook"}' \
-        io.simcore.description='{"description": "Jupyter notebook using base docker image"}' \
+LABEL io.simcore.key='{"key": "${SERVICE_KEY}"}' \
+        io.simcore.tag='{"tag": "${SERVICE_VERSION}"}' \
+        io.simcore.name='{"name": "${SERVICE_NAME}"}' \
+        io.simcore.description='{"description": "Jupyter notebook"}' \
         io.simcore.contact='{"contact": "anderegg@itis.swiss"}' \
         io.simcore.authors='{"authors": [{"name": "sanderegg", "email": ""anderegg@itis.swiss"", "affiliation": "ITIS Foundation"}]}' \
-        io.simcore.inputs='{"inputs": []}' \
-        io.simcore.outputs='{"outputs": []}' \
+        io.simcore.inputs='{"inputs": [{"key": "input_1", "label": "input 1", "desc": "file input", "type": "file-url", "value": "null"}]}' \
+        io.simcore.outputs='{"outputs": [{"key": "output_1", "label": "output 1", "desc": "file output", "type": "file-url", "value": "null"}]}' \
         io.simcore.viewer='{"viewer":{"ip":null, "port":null}}' \
         simcore.service.settings='[{"name": "ports", "type": "int", "value": 8888}, {"name": "constraints", "type": "string", "value": ["node.platform.os == linux"]}]' \
-        org.label-schema.url='http://jupyter.org/' \
-        org.label-schema.vcs-url='https://github.com/jupyter/docker-stacks' \
         org.label-schema.schema-version="1.0" \
         org.label-schema.build-date="${BUILD_DATE}" \
         org.label-schema.vcs-ref="${VCS_REF}"
+# ----------------------------------------------------------------
+# install simcore-sdk
+COPY --chown=jovyan:users packages/simcore-sdk /packages/simcore-sdk
+COPY --chown=jovyan:users packages/s3wrapper /packages/s3wrapper
+RUN pip install --upgrade pip && \
+    pip install /packages/simcore-sdk &&\
+    pip install /packages/s3wrapper
+# ----------------------------------------------------------------
+# configure notebook
+RUN pip install jupyter_contrib_nbextensions && \
+    jupyter contrib nbextensions install --user && \
+    jupyter nbextension enable hide_input/main && \
+    jupyter nbextension enable init_cell/main
+# ----------------------------------------------------------------
+# prepare for booting
+COPY --chown=jovyan:users services/dy-jupyter/docker /docker
 
-# Create a Python 2.x environment using conda including at least the ipython kernel
-# and the kernda utility. Add any additional packages you want available for use
-# in a Python 2 notebook to the first line here (e.g., pandas, matplotlib, etc.)
-RUN conda create --quiet --yes -p $CONDA_DIR/envs/python2 python=2.7 ipython ipykernel kernda && \
-    conda clean -tipsy
+# ----------------------------------------------------------------
+# put demo file
+COPY --chown=jovyan:users services/dy-jupyter/demo /home/jovyan/demo
 
-USER root
+FROM base AS development
+ENV CREATE_DUMMY_TABLE=1
+ENV USE_CASE_CONFIG_FILE="devel/port_config.json"
+COPY --chown=jovyan:users services/dy-jupyter/devel /home/jovyan/devel
+RUN pip install -r /home/jovyan/devel/requirements.txt
+CMD [ "/bin/sh", "/docker/boot.sh" ]
 
-# Create a global kernelspec in the image and modify it so that it properly activates
-# the python2 conda environment.
-RUN $CONDA_DIR/envs/python2/bin/python -m ipykernel install && \
-$CONDA_DIR/envs/python2/bin/kernda -o -y /usr/local/share/jupyter/kernels/python2/kernel.json
-
-USER $NB_USER
-
-# starts notebook without token
-CMD [ "start-notebook.sh", "--NotebookApp.token=''", "--NotebookApp.tornado_settings={\"headers\":{\"Content-Security-Policy\":\"frame-ancestors+'self'+http://osparc01.speag.com:9081;+report-uri/api/security/csp-report\"}}" ]
+FROM base AS production
+ENTRYPOINT [ "/bin/sh", "/docker/boot.sh" ]
