webserver: fixes on main and config schema

--- a/services/web/server/src/simcore_service_webserver/config/host-dev-config.yaml
+++ b/services/web/server/src/simcore_service_webserver/config/host-dev-config.yaml
@@ -1,6 +1,6 @@
 version: '1.0'
 # TODO rename as main
-app:
+main:
   client_outdir: ~/devp/osparc-simcore/services/web/client/source-output
   host: 127.0.0.1
   log_level: DEBUG
