--- a/services/dy-jupyter/docker-compose.devel.yml
+++ b/services/dy-jupyter/docker-compose.devel.yml
@@ -10,7 +10,7 @@ services:
         SERVICE_KEY: simcore/services/jupyter-base-notebook-dev
         SERVICE_VERSION: ${SERVICES_VERSION}
         BUILD_DATE: ${BUILD_DATE}
-        VCS_REF: ${VCS_REF}
+        VCS_REF: ${VCS_REF}        
     environment: 
       - S3_ENDPOINT=${S3_ENDPOINT}
       - S3_ACCESS_KEY=${S3_ACCESS_KEY}
@@ -20,11 +20,16 @@ services:
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_DB=${POSTGRES_DB}
+      - USE_CASE_CONFIG_FILE=devel/port_config.json      
     depends_on:
       - postgres
       - minio
     ports:
       - '8888:8888'
+    volumes: 
+      - ../../packages/:/packages
+      - ./devel:/home/jovyan/devel
+      - ./work:/home/jovyan/work
  
 #--------------------------------------------------------------------
   postgres:
