added parameterization of dummy tables

--- a/services/dy-2Dgraph/use-cases/cc/Dockerfile
+++ b/services/dy-2Dgraph/use-cases/cc/Dockerfile
@@ -24,6 +24,7 @@ VOLUME /home/jovyan/devel
 VOLUME /home/jovyan/devel-config
 VOLUME /home/jovyan/notebook
 ENV USE_CASE_CONFIG_FILE="node_configuration_file.json"
+ENV INIT_OPTIONS="5000 200 20 tab"
 ENV CREATE_DUMMY_TABLE=1
 ENTRYPOINT []
 CMD [ "/bin/bash", "/docker/boot.sh" ]
