--- a/services/dy-2Dgraph/use-cases/docker-compose.devel.yml
+++ b/services/dy-2Dgraph/use-cases/docker-compose.devel.yml
@@ -14,6 +14,7 @@ services:
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_DB=${POSTGRES_DB}
       - USE_CASE_CONFIG_FILE=devel-config/port_config.json
+      - INIT_OPTIONS=5000 200 20 tab
     volumes: 
       - ./devel:/home/jovyan/devel
       - ./cc/cc-single-cell/notebook:/home/jovyan/notebook
@@ -37,6 +38,7 @@ services:
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_DB=${POSTGRES_DB}
       - USE_CASE_CONFIG_FILE=devel-config/port_config.json
+      - INIT_OPTIONS=5000 200 20 tab
     volumes: 
       - ./devel:/home/jovyan/devel
       - ./cc/cc-oned/notebook:/home/jovyan/notebook
@@ -60,6 +62,7 @@ services:
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_DB=${POSTGRES_DB}
       - USE_CASE_CONFIG_FILE=devel-config/port_config.json
+      - INIT_OPTIONS=5000 200 20 tab
     volumes: 
       - ./devel:/home/jovyan/devel
       - ./cc/cc-twod/notebook:/home/jovyan/notebook
