--- a/services/web/server/src/simcore_service_webserver/config/host-dev-config.yaml
+++ b/services/web/server/src/simcore_service_webserver/config/host-dev-config.yaml
@@ -3,7 +3,7 @@ version: '1.0'
 main:
   client_outdir: ~/devp/osparc-simcore/services/web/client/source-output
   host: 127.0.0.1
-  log_level: DEBUG
+  log_level: INFO
   port: 8080
   testing: true
   disable_services: [director, postgres, rabbit, s3]
