--- a/services/dy-2Dgraph/use-cases/docker-compose.devel.yml
+++ b/services/dy-2Dgraph/use-cases/docker-compose.devel.yml
@@ -72,28 +72,29 @@ services:
       - postgres
       - minio
   #--------------------------------------------------------------------
-  # kember:
-  #   image: services_kember-viewer-dev
-  #   build:
-  #     target: development
-  #     args:
-  #       JSON_CONFIGURATION: kember_config.json        
-  #   environment: 
-  #     - S3_ENDPOINT=${S3_ENDPOINT}
-  #     - S3_ACCESS_KEY=${S3_ACCESS_KEY}
-  #     - S3_SECRET_KEY=${S3_SECRET_KEY}
-  #     - S3_BUCKET_NAME=${S3_BUCKET_NAME}
-  #     - POSTGRES_ENDPOINT=${POSTGRES_ENDPOINT}
-  #     - POSTGRES_USER=${POSTGRES_USER}
-  #     - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-  #     - POSTGRES_DB=${POSTGRES_DB}
-  #   depends_on:
-  #     - postgres
-  #     - minio
-  #   volumes: 
-  #     - ./kember/kember.ipynb:/home/jovyan/kember.ipynb
-  #     - ../../../packages/simcore-sdk/src:/home/jovyan/packages/packages/simcore-sdk/src
-  #     - ../../../packages/s3wrapper/src:/home/jovyan/packages/packages/s3wrapper/src
+  kember:
+    image: services_kember-viewer-dev
+    build:
+      target: development
+    environment: 
+      - S3_ENDPOINT=${S3_ENDPOINT}
+      - S3_ACCESS_KEY=${S3_ACCESS_KEY}
+      - S3_SECRET_KEY=${S3_SECRET_KEY}
+      - S3_BUCKET_NAME=${S3_BUCKET_NAME}
+      - POSTGRES_ENDPOINT=${POSTGRES_ENDPOINT}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DB}
+      - USE_CASE_CONFIG_FILE=devel-config/port_config.json
+      - INIT_OPTIONS=100 6000 20 space
+    volumes: 
+      - ./devel:/home/jovyan/devel
+      - ./kember/notebook:/home/jovyan/notebook
+      - ./kember/devel-config:/home/jovyan/devel-config
+      - ../../../packages:/packages
+    depends_on:
+      - postgres
+      - minio
   #--------------------------------------------------------------------
   postgres:
     image: postgres:10
